--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.6.4.RELEASE</version>
+				<version>2.6.4</version>
 			</plugin>
 		</plugins>
 		<finalName>${project.artifactId}</finalName>
