--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,4 +64,5 @@ jobs:
                 echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
                 sudo apt-get update
                 sudo apt-get install trivy
+                trivy image nguyen53/cyb600_midterm:tagname
     working_directory: ~/spring-rest-helloworld
